2008-07-09  Lluis Sanchez Gual <lluis@novell.com> 

	* BacktraceWrapper.cs, ValueReference.cs, TypeValueReference.cs,
	  NamespaceValueReference.cs: Added support for code completion.

2008-07-08  Lluis Sanchez Gual <lluis@novell.com> 

	* RemoteFrameObject.cs: Crash fix.

2008-07-07  Lluis Sanchez Gual <lluis@novell.com> 

	* DebuggerServer.cs, Util.cs, MyTextReader.cs, Convert.cs,
	  BacktraceWrapper.cs, ExpressionEvaluator.cs,
	  Mono.Debugging.Server.Mdb.mdp, NullValueReference.cs,
	  IExpressionValueSource.cs, ArrayValueReference.cs,
	  ValueReference.cs, RemoteFrameObject.cs, TypeValueReference.cs,
	  Expression.cs, NRefactoryEvaluator.cs, FieldReference.cs,
	  PropertyReference.cs, VariableReference.cs, IValueReference.cs,
	  ArrayElementGroup.cs, Server.cs, NamespaceValueReference.cs,
	  LiteralValueReference.cs, Makefile: Implemented an expression
	  evaluator based on NRefactory.

2008-07-02  Lluis Sanchez Gual <lluis@novell.com> 

	* DebuggerServer.cs, Util.cs, BacktraceWrapper.cs, FieldReference.cs,
	  Mono.Debugging.Server.Mdb.mdp, PropertyReference.cs,
	  IValueReference.cs, VariableReference.cs,
	  IExpressionValueSource.cs, Makefile, ArrayValueReference.cs:
	  Implement support for modifying variable values and disassembling
	  files.

2008-07-01  Lluis Sanchez Gual <lluis@novell.com> 

	* DebuggerServer.cs: Fix some deadlocks.
	* BacktraceWrapper.cs: Fix infinite loop.

2008-07-01  Lluis Sanchez Gual <lluis@novell.com> 

	* DebuggerServer.cs: Insert breakpoints using the global thread group.

2008-06-26  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Debugging.Server.Mdb.mdp, Server.cs, Makefile: Enable unix
	  channel support.

2008-06-26  Lluis Sanchez Gual <lluis@novell.com> 

	* DebuggerServer.cs: Allow setting the active thread. Implemented
	  GetThreads and GetProcesses.
	* Util.cs, BacktraceWrapper.cs: Fix warnings.

2008-06-20  Lluis Sanchez Gual <lluis@novell.com> 

	* DebuggerServer.cs: Implemented detach. Send all events to the client